add friend btn and pending friends logic changes
